<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        android:gravity="center"
        android:orientation="vertical"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:text="@string/text_login_logan"
            android:textColor="@color/red"
            android:textSize="25dp"
            android:textStyle="italic|normal"
            android:textAlignment="center"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:text="@string/text_login_app_name"
            android:textColor="@color/red"
            android:textSize="32dp"
            android:textStyle="bold|normal"
            android:textAlignment="center"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_button"
            android:fontFamily="@font/lobster"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            tools:pointerIcon="hand"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/image_logo" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>