<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.DetailStoryFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/scrollViewDetailStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtTitleStory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lobster"
                    android:text="Tiêu Đề Của Truyện"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgCoverStory"
                    android:layout_width="180dp"
                    android:layout_height="260dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtAuthorStory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lobster"
                        android:padding="5dp"
                        android:text="Tên Tác Giả"
                        android:textSize="20dp"
                        android:textStyle="italic" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/txtCategoryStory"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/lobster"
                        android:text="Thể loại"
                        android:textColor="@color/black"
                        android:textSize="12dp"

                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnBookmark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/blue"
                        android:fontFamily="@font/lobster"
                        android:text="@string/btn_bookmark"
                        android:textColor="@color/white"
                        app:icon="@drawable/bookmark_icon" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnReadFromBeging"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/customBlue"
                        android:fontFamily="@font/lobster"
                        android:text="@string/btn_read_beging"
                        android:textColor="@color/white"
                        app:icon="@drawable/ic_check_bookmark" />

                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutDetailStory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tab_1" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tab_2" />

            </com.google.android.material.tabs.TabLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewChaperList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/txtViewIntroduceStory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>